...
                android:id="@+id/meditationRow"
                android:background="@drawable/clickable_table_row_selector"
                android:clickable="true"
                android:onClick="showTimePickerDialog">

                <TextView
                    android:id="@+id/meditationTimeText"
                    android:layout_marginStart="5dp"
                    android:padding="10dp"
                    android:text="@string/meditations_text"
                    android:textColor="@color/black"
                    android:textSize="@dimen/normal_text_size" />

                <TextView
                    android:id="@+id/meditationTime"
                    android:layout_marginEnd="5dp"
                    android:gravity="end"
                    android:padding="10dp"
                    android:textColor="@color/bpTransparent_black"
                    android:textSize="@dimen/normal_text_size" />
            </TableRow>
...
                android:id="@+id/lessonRow"
                android:background="@drawable/clickable_table_row_selector"
                android:clickable="true"
                android:onClick="showTimePickerDialog">

                <TextView
                    android:id="@+id/lessonTimeText"
                    android:layout_marginStart="5dp"
                    android:padding="10dp"
                    android:text="@string/lessons_text"
                    android:textColor="@color/black"
                    android:textSize="@dimen/normal_text_size" />

                <TextView
                    android:id="@+id/lessonTime"
                    android:layout_marginEnd="5dp"
                    android:gravity="end"
                    android:padding="10dp"
                    android:textColor="@color/bpTransparent_black"
                    android:textSize="@dimen/normal_text_size" />
            </TableRow>
...
                android:id="@+id/wakeUpRow"
                android:background="@drawable/clickable_table_row_selector"
                android:clickable="true"
                android:onClick="showTimePickerDialog">

                <TextView
                    android:id="@+id/wakeUpText"
                    android:layout_marginStart="5dp"
                    android:padding="10dp"
                    android:text="@string/wake_up_text"
                    android:textColor="@color/black"
                    android:textSize="@dimen/normal_text_size" />

                <TextView
                    android:id="@+id/wakeUpTime"
                    android:layout_marginEnd="5dp"
                    android:gravity="end"
                    android:padding="10dp"
                    android:textColor="@color/bpTransparent_black"
                    android:textSize="@dimen/normal_text_size" />
            </TableRow>
...
                android:id="@+id/goToSleepRow"
                android:background="@drawable/clickable_table_row_selector"
                android:clickable="true"
                android:onClick="showTimePickerDialog">

                <TextView
                    android:id="@+id/goToSleepText"
                    android:layout_marginStart="5dp"
                    android:padding="10dp"
                    android:text="@string/go_to_sleep_text"
                    android:textColor="@color/black"
                    android:textSize="@dimen/normal_text_size" />

                <TextView
                    android:id="@+id/goToSleepTime"
                    android:layout_marginEnd="5dp"
                    android:gravity="end"
                    android:padding="10dp"
                    android:textColor="@color/bpTransparent_black"
                    android:textSize="@dimen/normal_text_size" />
            </TableRow>
...
