...

    <string name="title_activity_preferences">Preferences</string>
    <string name="meditations_text">Meditation Time</string>
    <string name="meditation">Meditation</string>>
    <string name="lessons_text">Lessons Time</string>
    <string name="lessons_day_text">Lessons Day</string>
    <string name="meditations_text_create_account">What time do you want to meditate daily?</string>
    <string name="lessons_text_create_account">What time on that day would you like to receive the lesson?</string>
    <string name="lessons_day_text_create_account">What day would you like to receive your weekly lesson?</string>

    <string name="title_activity_lesson">Weekly Lesson</string>
    <string name="title_activity_assessment">Assessment</string>
    <string name="epilogue">Thank you.</string>

...
